[package]
name = "avan"
version = "0.1.0"
edition = "2021"

[dependencies]

reqwest = { version = "0.12", features = ["blocking", "cookies", "http2"]}


http-body-util = "0.1"
hyper-util = { version = "0.1", default-features = false, features = ["server-auto"] }
rustls = { version = "0.23", default-features = false, features = ["tls12", "ring"] }
rustls-pemfile = "2"
tokio = { version = "1.0", features = ["io-std", "macros", "net", "rt-multi-thread"] }


http = "1"
hyper = { version = "1", default-features = false }
#hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "tokio"] }
log = { version = "0.4.4", optional = true }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-native-certs = { version = "0.8", optional = true }
rustls-platform-verifier = { version = "0.3", optional = true }
#rustls = { version = "0.23", default-features = false }
#tokio = "1.0"
tokio-rustls = { version = "0.26", default-features = false }
tower-service = "0.3"
webpki-roots = { version = "0.26", optional = true }
futures-util = { version = "0.3", default-features = false }

[dependencies.hyper-rustls]
version = "0.27"
features = [
    "http1",
    "http2",
    "logging",
    "native-tokio",
    "ring",
    "rustls-platform-verifier",
    "tls12",
    "webpki-tokio",
]
