[package]
name = "avan"
version = "0.2.1"
edition = "2021"

[dependencies]

http = "1"
bytes = "1.8.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "tokio"] }
hyper-rustls = {version = "0.27", default-features = false, features = ["http1","http2","logging","native-tokio","ring","rustls-platform-verifier","tls12","webpki-tokio"]}
rustls = { version = "0.23", default-features = false, features = ["tls12", "ring"] }
tokio = { version = "1.0", features = ["io-std", "macros", "net", "rt-multi-thread"] }

serde = { version = "1.0"}
serde_derive = { version = "1.0" }
serde-value = "0.7"
serde-types = "0.1" 
serde_json = "1.0"
serde-aux = "4"
chrono = "0.4.38"
url = "2.5"

hashbrown = "0.15.2"
reqwest = { version = "0.12", features = ["blocking", "cookies", "http2", "socks"]}
ureq = "2.10.1"
rand = "0.8.5"
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }